Fixes #106: IE: dropdown menus have bad z-index in Wall page

--- a/static/css/astrobin.less
+++ b/static/css/astrobin.less
@@ -1887,6 +1887,7 @@ BODY:first-of-type ul.as-list, x:-moz-any-link, x:default { /* Target FF 3.5+ */
         display: block;}}
 
 .bar_mixin {
+    z-index: 2;
     list-style: none;
     margin: 0 0 @spacer-xxlarge 0;
     padding: 0;
